unpackaged/main/default/objects/dfsle__Log__c/fields/dfsle__Class__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Class__c</fullName>
    <externalId>true</externalId>
    <label>Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>