unpackaged/main/default/objects/dfsle__Log__c/fields/dfsle__EntityId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EntityId__c</fullName>
    <externalId>true</externalId>
    <label>DocuSign entity ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>