unpackaged/main/default/objects/dfsle__Log__c/fields/dfsle__Message__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>