unpackaged/main/default/objects/dfsle__Log__c/fields/dfsle__Method__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Method__c</fullName>
    <label>Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>