unpackaged/main/default/objects/dfsle__Log__c/fields/dfsle__Version__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Version__c</fullName>
    <externalId>true</externalId>
    <label>Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>