unpackaged/main/default/objects/dfsle__Log__c/listViews/dfsle__All.listView-meta.xml
<ListView>
    <fullName>dfsle__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>dfsle__EntityId__c</columns>
    <columns>dfsle__SourceId__c</columns>
    <columns>dfsle__Severity__c</columns>
    <columns>dfsle__Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>